feat(translation): update settings

--- a/src/app/shared/components/settings/settings.component.html
+++ b/src/app/shared/components/settings/settings.component.html
@@ -23,7 +23,7 @@
           <button class="button button__create"
                   mat-button
                   (click)="onDatabaseChange()">
-            Change
+            {{'PAGES.SETTINGS.BUTTONS.CHANGE' | translate}}
           </button>
         </div>
       </div>
