--- a/src/app/shared/components/create-dialog/create-dialog.component.html
+++ b/src/app/shared/components/create-dialog/create-dialog.component.html
@@ -13,7 +13,7 @@
     <form [formGroup]="categoryForm">
       <mat-form-field [floatLabel]="'always'">
         <mat-label>{{"DIALOG.FIELDS.NAME" | translate}}</mat-label>
-        <input [required]="true" [formControlName]="'name'" matInput>
+        <input cdkFocusInitial [required]="true" [formControlName]="'name'" matInput>
         <mat-error>
           {{"DIALOG.VALIDATIONS.NAME" | translate}}
         </mat-error>
