--- a/src/app/shared/components/settings/settings.component.html
+++ b/src/app/shared/components/settings/settings.component.html
@@ -10,16 +10,31 @@
   <main class="settings__content">
     <ubuntu-container [title]="'PAGES.SETTINGS.SECTIONS.COMMON' | translate">
       <div class="settings__item">
-        <div class="settings__item-label"><mat-icon class="settings__item-label-icon">storage</mat-icon> {{"PAGES.SETTINGS.FIELDS.DATABASE_PATH" | translate}}</div>
+        <div class="settings__item-label">
+          <mat-icon class="settings__item-label-icon">storage</mat-icon>
+          {{"PAGES.SETTINGS.FIELDS.DATABASE_PATH" | translate}}
+        </div>
         <div class="settings__item-field settings__item-field--disable">
-          {{this.settingsService.settings.databasePath}}
+          <span class="settings__text"
+                [matTooltipClass]="'mat-tooltip--long-text'"
+                [matTooltip]="this.settingsService.settings.databasePath">
+            {{this.settingsService.settings.databasePath}}
+          </span>
+          <button class="button button__create"
+                  mat-button
+                  (click)="onDatabaseChange()">
+            {{'PAGES.SETTINGS.BUTTONS.CHANGE' | translate}}
+          </button>
         </div>
       </div>
     </ubuntu-container>
 
     <ubuntu-container [title]="'PAGES.SETTINGS.SECTIONS.LANG' | translate">
       <div class="settings__item">
-        <div class="settings__item-label"><mat-icon class="settings__item-label-icon">language</mat-icon> {{"PAGES.SETTINGS.FIELDS.LANG" | translate}}</div>
+        <div class="settings__item-label">
+          <mat-icon class="settings__item-label-icon">language</mat-icon>
+          {{"PAGES.SETTINGS.FIELDS.LANG" | translate}}
+        </div>
         <mat-form-field class="settings__item-field">
           <mat-select [value]="settingsService.settings.language" (valueChange)="onSelectLanguage($event)">
             <mat-option *ngFor="let language of languageOptions" [value]="language.value">
@@ -32,7 +47,10 @@
       <mat-divider></mat-divider>
 
       <div class="settings__item">
-        <div class="settings__item-label"><mat-icon class="settings__item-label-icon">text_format</mat-icon> {{"PAGES.SETTINGS.FIELDS.REGION" | translate}}</div>
+        <div class="settings__item-label">
+          <mat-icon class="settings__item-label-icon">text_format</mat-icon>
+          {{"PAGES.SETTINGS.FIELDS.REGION" | translate}}
+        </div>
         <mat-form-field class="settings__item-field">
           <mat-select [value]="settingsService.settings.region" (valueChange)="onSelectRegion($event)">
             <mat-option *ngFor="let region of regionOptions" [value]="region.value">
@@ -40,6 +58,35 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+      </div>
+    </ubuntu-container>
+
+    <ubuntu-container [title]="'PAGES.SETTINGS.SECTIONS.APPEARANCE' | translate">
+      <div class="settings__item">
+        <div class="settings__item-label">
+          <mat-icon class="settings__item-label-icon">category</mat-icon>
+          {{"PAGES.SETTINGS.FIELDS.ICONS" | translate}}
+        </div>
+        <div  class="settings__item-field">
+          <div class="settings__item-field settings__item-field--disable">
+            {{"PAGES.SETTINGS.ICONS_PACK_NAMES.DEFAULT" | translate}}
+          </div>
+        </div>
+      </div>
+
+      <mat-divider></mat-divider>
+
+      <div class="settings__item">
+        <div class="settings__item-label">
+          <mat-icon class="settings__item-label-icon">invert_colors</mat-icon>
+          {{"PAGES.SETTINGS.FIELDS.MONO" | translate}}
+        </div>
+        <div class="settings__item-field">
+          <mat-slide-toggle class="settings__toggle"
+                            [checked]="settingsService.settings.appearance.type === IconTypeEnum.Mono"
+                            (change)="onColorSelect($event)">
+          </mat-slide-toggle>
+        </div>
       </div>
     </ubuntu-container>
   </main>
