--- a/src/app/shared/components/settings/settings.component.scss
+++ b/src/app/shared/components/settings/settings.component.scss
@@ -2,6 +2,14 @@
   user-select: none;
   font-family: 'Ubuntu';
 
+  &__text {
+    margin-right: 12px;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
   &__header {
     height: 42px;
     padding: 4px 8px;
@@ -60,10 +68,40 @@
   }
 
   &__item-field {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     width: 70%;
+  }
+
+  &__multi-item-field-container {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
   }
 
   &__item-field--disable {
     color: gray;
+  }
+
+  &__toggle.mat-checked {
+    .mat-slide-toggle-bar {
+      background-color: #ff9069;
+    }
+    .mat-slide-toggle-thumb {
+      background-color: #e95420;
+    }
+  }
+
+  .button {
+    padding: 0 12px;
+    min-width: initial;
+
+    font-family: Ubuntu;
+    font-weight: normal;
+    color: #111;
+    background-color: rgb(252, 252, 252);
+    border: 1px solid rgb(196,196,196);
   }
 }
