--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -69,7 +69,8 @@
   &__expand-button-container {
     display: flex;
     align-items: center;
-    width: 32px;
+    width: 24px;
+    margin-right: 8px;
   }
 
   &__expand-button {
