feat(welcome-page): implement page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-home *ngIf="dbExist"></app-home>
-<app-database-select *ngIf="!dbExist"></app-database-select>
+<app-welcome-page *ngIf="!dbExist"></app-welcome-page>
