--- a/src/app/database-select/database-select.component.html
+++ b/src/app/database-select/database-select.component.html
@@ -3,7 +3,7 @@
     {{"PAGES.DATABASE_SELECT.TEXT" | translate}}
   </div>
   <div>
-    <button mat-button class="button__create" (click)="onCreate()">{{"PAGES.DATABASE_SELECT.CREATE" | translate}}</button>
-    <button mat-button (click)="onOpen()">{{"PAGES.DATABASE_SELECT.OPEN" | translate}}</button>
+    <button mat-button class="button button__create" (click)="onCreate()">{{"PAGES.DATABASE_SELECT.CREATE" | translate}}</button>
+    <button class="button" mat-button (click)="onOpen()">{{"PAGES.DATABASE_SELECT.OPEN" | translate}}</button>
   </div>
 </div>
