refactor(welcome-page): style

--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,7 +1,7 @@
 <div class="welcome-page">
   <div class="welcome-page__content">
     <img class="welcome-page__app-icon"
-         src="assets/icons/favicon.png"
+         src="assets/icons/app-icon.png"
          [@title]="'in'">
     <div class="welcome-page__title"
          [@title]="'in'"
