--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -9,7 +9,7 @@
   user-select: none;
 
   &__content {
-    height: 50%;
+    height: 380px;
     display: flex;
     flex-direction: column;
     align-items: center;
