--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,12 @@ html, body {
 }
 
 .mat-tooltip {
+  font-family: Ubuntu;
+  font-weight: normal;
   font-size: 14px;
+  line-height: 1.5;
+  background: #333;
+  border-radius: 0 !important;
 }
 
 .mat-tooltip--long-text {
