--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -77,6 +77,9 @@
     }
 
     &__stat {
+      display: flex;
+      align-items: center;
+
       font-family: Ubuntu;
       font-size: 18px;
       color: #111;
