--- a/src/app/shared/components/settings/settings.component.scss
+++ b/src/app/shared/components/settings/settings.component.scss
@@ -1,4 +1,9 @@
 .settings {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
   user-select: none;
   font-family: 'Ubuntu';
 
@@ -11,7 +16,7 @@
   }
 
   &__header {
-    height: 42px;
+    height: 50px;
     padding: 4px 8px;
     display: flex;
     align-items: center;
@@ -37,7 +42,9 @@
   }
 
   &__content {
+    height: 100%;
     padding: 32px;
+    overflow: auto;
 
     background: rgb(247, 247, 247);
 
@@ -103,5 +110,21 @@
     color: #111;
     background-color: rgb(252, 252, 252);
     border: 1px solid rgb(196,196,196);
+  }
+
+  .mat-button-toggle-checked {
+    background: #e95420;
+    line-height: initial;
+    color: white;
+  }
+
+  .mat-button-toggle-label-content {
+    line-height: 36px;
+    font-size: 14px;
+    font-family: Ubuntu;
+  }
+
+  .mat-button-toggle-button {
+    width: 104px;
   }
 }
