--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,9 +25,11 @@ html, body {
     }
   }
 
-  &-settings {
+  &-settings,
+  &-notes {
     .mat-dialog-container {
       height: 600px;
+      width: 600px;
       padding: 0;
 
       border-radius: 8px 8px 0 0;
