feat(app): update loader for app startup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,11 +9,6 @@ html, body {
   background-color: white;
 }
 
-/* CAN (MUST) BE REMOVED ! Sample Global style */
-.container {
-  height: 100%;
-}
-
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 
@@ -67,5 +62,30 @@ html, body {
    margin-right: 4px;
 
    color: rgb(140, 140, 140);
+  }
+}
+
+.app {
+  &__image {
+    width: 128px;
+  }
+
+  &__loading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    position: absolute;
+    top: 50%;
+    right: 50%;
+
+    transform: translate(50%,-50%);
+    animation: blinker 1.5s ease-in infinite;
+  }
+
+  @keyframes blinker {
+    50% {
+      opacity: 0.5;
+    }
   }
 }
