--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,19 @@
 <div class="container">
-  <mat-sidenav-container  class="example-container">
-    <mat-sidenav #sidenav mode="side" opened class="home__sidenav"
-                 [fixedInViewport]="true">
+  <mat-sidenav-container>
+    <mat-sidenav #sidenav mode="side"
+                 class="home__sidenav"
+                 [class.home__sidenav--minimize]="sideNavTracker.collapse$ | async"
+                 [fixedInViewport]="true"
+                 opened
+    >
       <app-navigation></app-navigation>
     </mat-sidenav>
 
-    <mat-sidenav-content fixedInViewport="true" scrollable="false" class="home__content">
+    <mat-sidenav-content fixedInViewport="true"
+                         scrollable="false"
+                         class="home__content"
+                         [class.home__content--minimize]="sideNavTracker.collapse$ | async"
+    >
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
