--- a/src/app/shared/components/settings/settings.component.html
+++ b/src/app/shared/components/settings/settings.component.html
@@ -14,17 +14,19 @@
           <mat-icon class="settings__item-label-icon">storage</mat-icon>
           {{"PAGES.SETTINGS.FIELDS.DATABASE_PATH" | translate}}
         </div>
-        <div class="settings__item-field settings__item-field--disable">
-          <span class="settings__text"
-                [matTooltipClass]="'mat-tooltip--long-text'"
-                [matTooltip]="this.settingsService.settings.databasePath">
-            {{this.settingsService.settings.databasePath}}
-          </span>
-          <button class="button button__create"
-                  mat-button
-                  (click)="onDatabaseChange()">
-            {{'PAGES.SETTINGS.BUTTONS.CHANGE' | translate}}
-          </button>
+        <div class="settings__item-container">
+          <div class="settings__item-field settings__item-field--disable">
+            <span class="settings__text"
+                  [matTooltipClass]="'mat-tooltip--long-text'"
+                  [matTooltip]="this.settingsService.settings.databasePath">
+              {{this.settingsService.settings.databasePath}}
+            </span>
+            <button class="button button__create"
+                    mat-button
+                    (click)="onDatabaseChange()">
+              {{'PAGES.SETTINGS.BUTTONS.CHANGE' | translate}}
+            </button>
+          </div>
         </div>
       </div>
     </ubuntu-container>
@@ -35,13 +37,15 @@
           <mat-icon class="settings__item-label-icon">language</mat-icon>
           {{"PAGES.SETTINGS.FIELDS.LANG" | translate}}
         </div>
-        <mat-form-field class="settings__item-field">
-          <mat-select [value]="settingsService.settings.language" (valueChange)="onSelectLanguage($event)">
-            <mat-option *ngFor="let language of languageOptions" [value]="language.value">
-              {{ language.name }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+        <div class="settings__item-container">
+          <mat-form-field class="settings__item-field">
+            <mat-select [value]="settingsService.settings.language" (valueChange)="onSelectLanguage($event)">
+              <mat-option *ngFor="let language of languageOptions" [value]="language.value">
+                {{ language.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
 
       <mat-divider></mat-divider>
@@ -51,13 +55,15 @@
           <mat-icon class="settings__item-label-icon">text_format</mat-icon>
           {{"PAGES.SETTINGS.FIELDS.REGION" | translate}}
         </div>
-        <mat-form-field class="settings__item-field">
-          <mat-select [value]="settingsService.settings.region" (valueChange)="onSelectRegion($event)">
-            <mat-option *ngFor="let region of regionOptions" [value]="region.value">
-              {{ region.name }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+        <div class="settings__item-container">
+          <mat-form-field class="settings__item-field">
+            <mat-select [value]="settingsService.settings.region" (valueChange)="onSelectRegion($event)">
+              <mat-option *ngFor="let region of regionOptions" [value]="region.value">
+                {{ region.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
     </ubuntu-container>
 
@@ -67,7 +73,7 @@
           <mat-icon class="settings__item-label-icon">straighten</mat-icon>
           {{"PAGES.SETTINGS.FIELDS.METRIC_SYSTEM" | translate}}
         </div>
-        <div class="settings__item-field">
+        <div class="settings__item-container">
           <mat-button-toggle-group [value]="MetricSystemEnum[settingsService.settings.units?.metricSystem] || MetricSystemEnum[settingsService.settings.region]" (change)="onMetricSystemChanged($event.value)">
             <mat-button-toggle [value]="MetricSystemEnum.Mi">{{"METRIC_SYSTEM.MILES" | translate}}</mat-button-toggle>
             <mat-button-toggle [value]="MetricSystemEnum.Km">{{"METRIC_SYSTEM.KILOMETERS" | translate}}</mat-button-toggle>
@@ -82,14 +88,16 @@
           <mat-icon class="settings__item-label-icon">attach_money</mat-icon>
           {{"PAGES.SETTINGS.FIELDS.CURRENCY" | translate}}
         </div>
-        <mat-form-field class="settings__item-field">
-          <mat-select (valueChange)="onSelectCurrency($event)"
-                      [value]="CurrencyEnum[settingsService.settings.units?.currency] || CurrencyEnum[settingsService.settings.region]">
-            <mat-option *ngFor="let currency of currencyOptions" [value]="currency.value">
-              {{ currency.name | translate }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+        <div class="settings__item-container">
+          <mat-form-field class="settings__item-field">
+            <mat-select (valueChange)="onSelectCurrency($event)"
+                        [value]="CurrencyEnum[settingsService.settings.units?.currency] || CurrencyEnum[settingsService.settings.region]">
+              <mat-option *ngFor="let currency of currencyOptions" [value]="currency.value">
+                {{ currency.name | translate }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
     </ubuntu-container>
 
@@ -99,7 +107,7 @@
           <mat-icon class="settings__item-label-icon">category</mat-icon>
           {{"PAGES.SETTINGS.FIELDS.ICONS" | translate}}
         </div>
-        <div  class="settings__item-field">
+        <div class="settings__item-container">
           <div class="settings__item-field settings__item-field--disable">
             {{"PAGES.SETTINGS.ICONS_PACK_NAMES.DEFAULT" | translate}}
           </div>
@@ -113,7 +121,7 @@
           <mat-icon class="settings__item-label-icon">animation</mat-icon>
           {{"PAGES.SETTINGS.FIELDS.ANIMATION" | translate}}
         </div>
-        <div class="settings__item-field">
+        <div class="settings__item-container">
           <mat-slide-toggle class="settings__toggle"
                             [checked]="settingsService.settings.appearance.animations"
                             (change)="onAnimationsChanged($event)">
@@ -128,7 +136,7 @@
           <mat-icon class="settings__item-label-icon">invert_colors</mat-icon>
           {{"PAGES.SETTINGS.FIELDS.MONO" | translate}}
         </div>
-        <div class="settings__item-field">
+        <div class="settings__item-container">
           <mat-slide-toggle class="settings__toggle"
                             [checked]="settingsService.settings.appearance.type === IconTypeEnum.Mono"
                             (change)="onColorSelect($event)">
