feat(app): print dialog

--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -19,6 +19,11 @@
     font-weight: 100;
   }
 
+  &__buttons {
+    display: flex;
+    gap: 8px;
+  }
+
   &__add-button {
     min-width: initial;
     padding: 0 8px;
