--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   overflow: hidden;
 
+  user-select: none;
   transition: background-color 0.25s ease-in;
 
   &__title-container {
