--- a/src/app/shared/components/print-dialog/print-dialog.component.html
+++ b/src/app/shared/components/print-dialog/print-dialog.component.html
@@ -8,7 +8,7 @@
           <span class="column__name">{{column.name | translate}}</span>
           <mat-checkbox [disabled]="column.id === 'name'"
                         [checked]="column.visible"
-                        (change)="column.visible = !column.visible; onChecked()">
+                        (change)="column.visible = !column.visible">
           </mat-checkbox>
         </div>
       </div>
