--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -8,7 +8,7 @@
         <mat-icon>add</mat-icon>
       </button>
       <button class="detail__add-button" mat-button (click)="onPrint()">
-        <mat-icon>print</mat-icon>
+        <mat-icon>picture_as_pdf</mat-icon>
       </button>
     </div>
   </div>
