--- a/src/app/shared/currency/currency.component.html
+++ b/src/app/shared/currency/currency.component.html
@@ -1,11 +1,17 @@
-<mat-icon [ngClass]="{
+<ng-container *ngIf="(currency && currency !== CurrencyEnum.Byn) || (!currency && locale !== LocaleEnum.By); else currencyText">
+  <mat-icon [ngClass]="{
     'currency': true,
     'currency--small': size === CurrencySizeEnum.Small
   }" 
-  *ngIf="(currency && currency !== CurrencyEnum.Byn) || (!currency && locale !== LocaleEnum.By); else currencyText"
+  *ngIf="renderAs === CurrencyRenderEnum.Svg"
   >
     {{currency | currency:locale}}
-</mat-icon>
+  </mat-icon>
+
+  <img class="currency__image"
+       *ngIf="renderAs === CurrencyRenderEnum.Image"
+       [src]="domSanitizer.bypassSecurityTrustUrl('data:image/svg+xml;base64, ' + CurrencyBase64Enum[currency | currency:locale])">
+</ng-container>
 
 <ng-template #currencyText>
   <span [ngClass]="{
