--- a/src/app/shared/components/print-dialog/print-dialog.component.scss
+++ b/src/app/shared/components/print-dialog/print-dialog.component.scss
@@ -5,9 +5,38 @@
   width: 100%;
 
   overflow: hidden;
+  user-select: none;
 
   &__title {
     margin-top: 0;
+  }
+
+  &__path {
+    max-width: 244px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: gray;
+  }
+
+  &__section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px;
+
+    &--small {
+      padding: 4px 0px;
+    }
+  }
+
+  ubuntu-container {
+    margin-bottom: 24px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   &__config-section {
@@ -38,25 +67,30 @@
     display: flex;
     gap: 8px;
     justify-content: flex-end;
+    margin-top: auto;
   }
 }
 
 .columns {
   width: 100%;
   max-width: 100%;
-  border: solid 1px #ccc;
   min-height: 60px;
   display: block;
   background: white;
   border-radius: 4px;
   overflow: hidden;
-  user-select: none;
+
+
+  .print-dialog__column-container:last-child {
+    .column__divider {
+      display: none;
+    }
+  }
 }
 
 .column {
   font-family: Ubuntu;
-  padding: 12px 16px 12px 12px;
-  border-bottom: solid 1px #ccc;
+  padding: 12px;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   align-items: center;
@@ -78,7 +112,12 @@
     color: gray;
     cursor: move;
   }
+
+  &__divider {
+    margin: 0 38px;
+  }
 }
+
 
 .cdk-drag-preview {
   box-sizing: border-box;
@@ -86,6 +125,10 @@
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
               0 8px 10px 1px rgba(0, 0, 0, 0.14),
               0 3px 14px 2px rgba(0, 0, 0, 0.12);
+
+  .column__divider {
+    display: none;
+  }
 }
 
 .cdk-drag-placeholder {
@@ -100,7 +143,7 @@
   border: none;
 }
 
-.columns.cdk-drop-list-dragging .column:not(.cdk-drag-placeholder) {
+.columns.cdk-drop-list-dragging .print-dialog__column-container:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
@@ -109,6 +152,13 @@
   font-family: Ubuntu;
   font-weight: normal;
   color: #111;
+}
+
+.button__edit {
+  width: initial;
+
+  background-color: rgb(252, 252, 252);
+  border: 1px solid rgb(196,196,196);
 }
 
 .button__submit {
