--- a/src/app/shared/components/print-dialog/print-dialog.component.html
+++ b/src/app/shared/components/print-dialog/print-dialog.component.html
@@ -1,21 +1,37 @@
 <section class="print-dialog">
   <div class="print-dialog__config-section">
-    <h3 class="print-dialog__title">Column order</h3>
-    <div class="print-dialog__content">
-      <div cdkDropList class="columns" (cdkDropListDropped)="drop($event)">
-        <div class="column" *ngFor="let column of columns" cdkDrag>
-          <mat-icon class="column__drag-icon" cdkDragHandle>drag_indicator</mat-icon>
-          <span class="column__name">{{column.name | translate}}</span>
-          <mat-checkbox [disabled]="column.id === 'name'"
-                        [checked]="column.visible"
-                        (change)="column.visible = !column.visible">
-          </mat-checkbox>
+    <h3 class="print-dialog__title">Configurations</h3>
+    <ubuntu-container [title]="'File path'">
+      <div class="print-dialog__section">
+        <span class="print-dialog__path"
+              [matTooltipClass]="'mat-tooltip--long-text'"
+              [matTooltip]="saveDirectoryPath">
+          {{saveDirectoryPath}}
+        </span>
+        <button mat-button class="button button__edit" (click)="onEditFilePath()">Edit</button>
+      </div>
+    </ubuntu-container>
+
+    <ubuntu-container [title]="'Order and visibility'">
+      <div class="print-dialog__section print-dialog__section--small">
+        <div cdkDropList class="columns" (cdkDropListDropped)="drop($event)">
+          <div class="print-dialog__column-container" *ngFor="let column of columns" cdkDrag>
+            <div class="column">
+              <mat-icon class="column__drag-icon" cdkDragHandle>drag_indicator</mat-icon>
+              <span class="column__name">{{column.name | translate}}</span>
+              <mat-checkbox [disabled]="column.id === 'name'"
+                            [checked]="column.visible"
+                            (change)="column.visible = !column.visible">
+              </mat-checkbox>
+            </div>
+            <mat-divider class="column__divider"></mat-divider>
+          </div>
         </div>
       </div>
-    </div>
+    </ubuntu-container>
     <div class="print-dialog__buttons">
       <button class="button button__cancel" mat-button (click)="dialogRef.close()">Cancel</button>
-      <button class="button button__submit" mat-button>Print</button>
+      <button class="button button__submit" mat-button (click)="onPrint()">Export</button>
     </div>
   </div>
 
@@ -26,8 +42,10 @@
   <div class="print-dialog__preview-section">
     <h3 class="print-dialog__title">Preview (A4)</h3>
     <div class="print-dialog__preview">
-      <app-preview-page [config]="config"
-                        [records]="records">
+      <app-preview-page #print
+                        [config]="config"
+                        [title]="data.title"
+                        [records]="data.records">
       </app-preview-page>
     </div>
   </div>
